# TAEG-ANC

./: .gitignore  README.md  analyze_conciseness.py  check_ollama.py  compare_methods.py  debug_verse_extraction.py  graph_builder_debug.py  improved_graph_builder.py  inspect_graph.py  pyproject.toml  requirements.txt  requirements_abstractive.txt  run_complete_experiment.py  run_pure_abstractive.py  run_taeg.py  run_taeg_abstractive.py  save_graph_stats.py
data/: ChronologyOfTheFourGospels_PW.xml  EnglishNIVJohn43_PW.xml  EnglishNIVLuke42_PW.xml  EnglishNIVMark41_PW.xml  EnglishNIVMatthew40_PW.xml  Golden_Sample.txt
outputs/: comparison_results.csv  evaluation_results_lexrank-ta.json  evaluation_results_lexrank.json  graph_edges_summary.json  graph_statistics.json  pure_bart.txt  pure_gemma.txt  pure_pegasus.txt  pure_primera.txt  taeg_bart.txt  taeg_gemma.txt  taeg_graph_cache.pkl  taeg_lexrank.txt  taeg_pegasus.txt  taeg_primera.txt  taeg_summary_lexrank-ta.txt  taeg_summary_lexrank.txt
src/: __init__.py  consolidators.py  data_loader.py  evaluator.py  main.py  summarizer.py
