[tool.poetry]
name = "taeg"
version = "1.0.0"
description = "Text Analysis of Evangelic Gospels - A modular system for consolidating and evaluating biblical text summaries"
authors = ["TAEG Team <taeg@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
lexrank = "^0.1.0"
nltk = "^3.8.1"
rouge-score = "^0.1.2"
bert-score = "^0.3.13"
transformers = "^4.41.2"
torch = "^2.3.1"
scipy = "^1.13.1"
pandas = "^2.2.2"
numpy = "^1.26.4"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"